--- a/NodeAuthJWT/package.json
+++ b/NodeAuthJWT/package.json
@@ -9,8 +9,10 @@
   "author": "Lucas",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "ejs": "^3.1.7",
     "express": "^4.18.0",
-    "mongoose": "^6.3.1"
+    "mongoose": "^6.3.1",
+    "validator": "^13.7.0"
   }
 }
