--- a/NodeAuthJWT/package.json
+++ b/NodeAuthJWT/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.7",
     "express": "^4.18.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
     "validator": "^13.7.0"
   }
